--- a/contato.html
+++ b/contato.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Codar. Home</title>
-    <link rel="stylesheet" href="/styles/styles.css">
+    <title>Codar. Contato</title>
+    <link rel="stylesheet" href="/styles/styles.css">   
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -12,12 +12,20 @@
         <h1><i>Codar</i>.</h1>
         <nav>
             <ul>
-                <li><a href="#">Início</a></li>
+                <li><a href="index.html">Início</a></li>
                 <li><a href="serviços.html">Serviços</a></li>
-                <li><a href="contato.html">Contato</a></li>
+                <li><a href="#">Contato</a></li>
                 <li><a href="login.html">Login</a></li>
             </ul>
         </nav>
     </header>
+    <section>
+        <form action="#" method="POST">
+            <label for="name">Digite seu nome:</label><br>
+            <input type="text" name="#" id="*"><br>
+            <label for="email">Digite seu e-mail:</label><br>
+            <input type="text" name="#" id="*"><br>
+        </form>
+    </section>
 </body>
 </html>
