--- a/login.html
+++ b/login.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Codar. Home</title>
+    <title>Codar. Login</title>
     <link rel="stylesheet" href="/styles/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
 </head>
@@ -12,10 +12,10 @@
         <h1><i>Codar</i>.</h1>
         <nav>
             <ul>
-                <li><a href="#">Início</a></li>
+                <li><a href="index.html">Início</a></li>
                 <li><a href="serviços.html">Serviços</a></li>
                 <li><a href="contato.html">Contato</a></li>
-                <li><a href="login.html">Login</a></li>
+                <li><a href="#">Login</a></li>
             </ul>
         </nav>
     </header>
