--- a/contato.html
+++ b/contato.html
@@ -13,7 +13,7 @@
         <nav>
             <ul>
                 <li><a href="index.html">Início</a></li>
-                <li><a href="serviços.html">Serviços</a></li>
+                <li><a href="servicos.html">Serviços</a></li>
                 <li><a href="#">Contato</a></li>
                 <li><a href="login.html">Login</a></li>
             </ul>
@@ -25,6 +25,8 @@
             <input type="text" name="#" id="*"><br>
             <label for="email">Digite seu e-mail:</label><br>
             <input type="text" name="#" id="*"><br>
+            <label for="message">Resuma o tipo de serviço que precisa:</label><br>
+            <input type="text" name="#" id="*">
         </form>
     </section>
 </body>
