--- a/index.html
+++ b/index.html
@@ -13,11 +13,14 @@
         <nav>
             <ul>
                 <li><a href="#">Início</a></li>
-                <li><a href="serviços.html">Serviços</a></li>
+                <li><a href="servicos.html">Serviços</a></li>
                 <li><a href="contato.html">Contato</a></li>
                 <li><a href="login.html">Login</a></li>
             </ul>
         </nav>
     </header>
+    <footer>
+        
+    </footer>
 </body>
 </html>
