--- a/login.html
+++ b/login.html
@@ -13,7 +13,7 @@
         <nav>
             <ul>
                 <li><a href="index.html">Início</a></li>
-                <li><a href="serviços.html">Serviços</a></li>
+                <li><a href="servicos.html">Serviços</a></li>
                 <li><a href="contato.html">Contato</a></li>
                 <li><a href="#">Login</a></li>
             </ul>
