iniciando formulário de contato

--- a/contato.html
+++ b/contato.html
@@ -26,7 +26,8 @@
             <label for="email">Digite seu e-mail:</label><br>
             <input type="text" name="#" id="*"><br>
             <label for="message">Resuma o tipo de serviço que precisa:</label><br>
-            <input type="text" name="#" id="*">
+            <textarea name="#" id="*" cols="60" rows="15"></textarea><br>
+            <button>Enviar</button>
         </form>
     </section>
 </body>
