mudança nos nomes das pastas

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Codar. Home</title>
-    <link rel="stylesheet" href="/styles/styles.css">
+    <link rel="stylesheet" href="styles/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -20,7 +20,7 @@
         </nav>
     </header>
     <footer>
-        
+        <address>Rua Sei Lá Onde, 13</address>
     </footer>
 </body>
 </html>
