--- a/index.html
+++ b/index.html
@@ -20,7 +20,12 @@
         </nav>
     </header>
     <footer>
-        <address>Rua Sei Lá Onde, 13</address>
+        <div>
+            <address>Rua Sei Lá Onde, 13</address>
+        </div>
+        <div>
+            <p>contato</p>
+        </div>
     </footer>
 </body>
 </html>
